# All-labs

./: .travis.yml  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  All-labs.sln  ArrList_Poletueva.docx  CMakeCache.txt  CMakeLists.txt  List_Poletueva.docx  Matrix_Poletueva.docx  MultiStack_Poletueva.docx  Polinom_Poletueva.docx  Polish_Poletueva.docx  Queue_Poletueva.docx  README.md  Scan_Poletueva.docx  StackList_Poletueva.docx  Stack_Poletueva.docx  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
ArrList/: ArrList.vcxproj  ArrList.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  main.cpp
ArrListLib/: ArrList.h  ArrListLib.vcxproj  ArrListLib.vcxproj.filters  CMakeLists.txt  cmake_install.cmake
ArrListTest/: ArrListTest.cpp  ArrListTest.vcxproj  ArrListTest.vcxproj.filters  CMakeLists.txt  cmake_install.cmake
Chart/: CMakeLists.txt  main.cpp
ChartLib/: CMakeLists.txt  TChartLine.cpp  TChartLine.h  TChartPlex.cpp  TChartPlex.h  TChartPoint.cpp  TChartPoint.h
ChartTest/: CMakeLists.txt  chartline_tests.cpp  chartplex_tests.cpp  chartpoint_tests.cpp
ExceptionLib/: CMakeLists.txt  Exception.cpp  Exception.h  ExceptionLib.vcxproj  ExceptionLib.vcxproj.filters  cmake_install.cmake
HashTable/: CMakeLists.txt  main.cpp
HashTableLib/: CMakeLists.txt  THashTable.h  TListHash.h
HashTableTest/: CMakeLists.txt  hashtable_tests.cpp  listhash_tests.cpp
List/: CMakeLists.txt  List.vcxproj  List.vcxproj.filters  cmake_install.cmake  main.cpp
ListLib/: CMakeLists.txt  Elem.h  List.h  ListLib.vcxproj  ListLib.vcxproj.filters  cmake_install.cmake
ListTest/: CMakeLists.txt  ListTest.cpp  ListTest.vcxproj  ListTest.vcxproj.filters  cmake_install.cmake
MultiStack/: CMakeLists.txt  MultiStack.vcxproj  MultiStack.vcxproj.filters  cmake_install.cmake  main.cpp
MultiStackLib/: CMakeLists.txt  MultiStack.h  MultiStackLib.vcxproj  MultiStackLib.vcxproj.filters  NewStack.h  cmake_install.cmake
MultiStackTest/: CMakeLists.txt  MultiStackTest.cpp  MultiStackTest.vcxproj  MultiStackTest.vcxproj.filters  cmake_install.cmake
Polinom/: CMakeLists.txt  Polinom.vcxproj  Polinom.vcxproj.filters  cmake_install.cmake  main.cpp
PolinomLib/: CMakeLists.txt  Monom.cpp  Monom.h  Polinom.cpp  Polinom.h  PolinomLib.vcxproj  PolinomLib.vcxproj.filters  cmake_install.cmake
PolinomTest/: CMakeLists.txt  PolinomTest.cpp  PolinomTest.vcxproj  PolinomTest.vcxproj.filters  cmake_install.cmake
Polish/: CMakeLists.txt  Polish.vcxproj  Polish.vcxproj.filters  cmake_install.cmake  main.cpp
PolishLib/: CMakeLists.txt  Polish.cpp  Polish.h  PolishLib.vcxproj  PolishLib.vcxproj.filters  Stroka.cpp  Stroka.h  cmake_install.cmake
PolishTest/: CMakeLists.txt  PolishTest.cpp  PolishTest.vcxproj  PolishTest.vcxproj.filters  cmake_install.cmake
Queue/: CMakeLists.txt  Queue.vcxproj  Queue.vcxproj.filters  cmake_install.cmake  main.cpp
QueueLib/: CMakeLists.txt  Queue.h  QueueLib.vcxproj  QueueLib.vcxproj.filters  cmake_install.cmake
QueueTest/: CMakeLists.txt  QueueTest.cpp  QueueTest.vcxproj  QueueTest.vcxproj.filters  cmake_install.cmake
SortTable/: CMakeLists.txt  main.cpp
SortTableLib/: CMakeLists.txt  TSortTable.h
SortTableTest/: CMakeLists.txt  sorttable_tests.cpp
Stack/: CMakeLists.txt  Stack.vcxproj  Stack.vcxproj.filters  cmake_install.cmake  main.cpp
StackLib/: CMakeLists.txt  Stack.cpp  Stack.h  StackLib.vcxproj  StackLib.vcxproj.filters  cmake_install.cmake
StackList/: CMakeLists.txt  StackList.vcxproj  StackList.vcxproj.filters  cmake_install.cmake  main.cpp
StackListLib/: CMakeLists.txt  StackList.h  StackListLib.vcxproj  StackListLib.vcxproj.filters  cmake_install.cmake
StackListTest/: CMakeLists.txt  StackListTest.cpp  StackListTest.vcxproj  StackListTest.vcxproj.filters  cmake_install.cmake
StackTest/: CMakeLists.txt  StackTest.vcxproj  StackTest.vcxproj.filters  cmake_install.cmake  stack_test.cpp
Table/: CMakeLists.txt  main.cpp
TableLib/: CMakeLists.txt  TKey.cpp  TKey.h  TScanTable.h  TTabRecord.h
TableTest/: CMakeLists.txt  key_tests.cpp  scantable_tests.cpp  tablerec_tests.cpp
TextTree/: CMakeLists.txt  main.cpp
TextTreeLib/: CMakeLists.txt  TText.cpp  TText.h  TTextLink.cpp  TTextLink.h
TextTreeTest/: CMakeLists.txt  textlink_tests.cpp  texttree_tests.cpp
TreeTable/: CMakeLists.txt  main.cpp
TreeTableLib/: CMakeLists.txt  TTreeNode.h  TTreeTable.h
TreeTableTest/: CMakeLists.txt  treetable_test.cpp
Vector/: CMakeLists.txt  Vector.vcxproj  Vector.vcxproj.filters  cmake_install.cmake  main.cpp
VectorLib/: CMakeLists.txt  Exception.h  Matrix.h  TVector.cpp  TVector.h  VectorLib.vcxproj  VectorLib.vcxproj.filters  cmake_install.cmake
VectorTest/: CMakeLists.txt  VectorTest.vcxproj  VectorTest.vcxproj.filters  cmake_install.cmake  matrix_test.cpp  test_main.cpp  vector_test.cpp
gtest/: cmake_install.cmake  gtest.vcxproj  gtest.vcxproj.filters
